[WPE][GTK] Fix building without unified sources https://bugs.webkit.org/show_bug.cgi?id=200641

Reviewed by Žan Doberšek.

Source/JavaScriptCore:

* b3/B3PatchpointSpecial.cpp: Add missing inclusion of the B3ProcedureInlines.h header.
* heap/SlotVisitor.cpp: Add missing inclusion of the BlockDirectoryInlines.h header.

Source/WebCore:

* CMakeLists.txt: Add WebCore as the list of libraries to link into WebCoreTestSupport, to
avoid underlinking, which makes it possible to link with LDFLAGS="-Wl,--no-undefined".
* editing/WebCorePasteboardFileReader.h: Add missing inclusion of the pal/SessionID.h
header.

Source/WebKit:

* UIProcess/gtk/WebDataListSuggestionsDropdownGtk.cpp: Add missing inclusions for headers
WebCore/GtkUtilities.h (for convertWidgetPointToScreenPoint), WebCore/IntPoint.h, and
WebPageProxy.h (the two latter to avoid usage of undefined types).
(WebKit::WebDataListSuggestionsDropdownGtk::show): Add namespace prefix to use
WebCore::IntPoint.


Canonical link: https://commits.webkit.org/214397@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248547 268f45cc-cd09-0410-ab3c-d52691b4dbfc