Source/WebCore/editing/WebCorePasteboardFileReader.h
@@ -26,6 +26,7 @@
 #pragma once
 
 #include "Pasteboard.h"
+#include <pal/SessionID.h>
 
 namespace WebCore {
 
